--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
+    "axios": "^1.7.1",
     "babel-jest": "^29.7.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
