--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
+    "@eslint/js": "^9.3.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "axios": "^1.7.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "9.3.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "5.1.3",
     "jest": "^29.7.0",
     "jest-expect-message": "^1.1.3",
-    "prettier": "2.8.7",
+    "prettier": "3.2.5",
     "supertest": "^7.0.0"
   }
 }
