--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.3.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
+    "allure-jest": "^3.0.0-beta.3",
     "axios": "^1.7.1",
     "babel-jest": "^29.7.0",
     "eslint": "9.3.0",
