--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
   "bracketSpacing": true,
   "arrowParens": "avoid",
   "trailingComma": "none",
-  "printWidth": 120
+  "printWidth": 200,
+  "endOfLine": "lf"
 }
