--- a/package.json
+++ b/package.json
@@ -14,19 +14,35 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.3.0",
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.9.0",
     "allure-jest": "^3.0.0-beta.3",
     "axios": "^1.7.1",
     "babel-jest": "^29.7.0",
-    "eslint": "9.3.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "jest-expect-message": "^1.1.3",
-    "prettier": "3.2.5",
+    "prettier": "^3.2.5",
     "supertest": "^7.0.0"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "**/*.+(cjs|js|ts|tsx)": [
+      "eslint --fix"
+    ],
+    "**/*.+(cjs|js|ts|json)": [
+      "prettier --cache --write"
+    ]
   }
 }
