--- a/package.json
+++ b/package.json
@@ -7,30 +7,32 @@
   "scripts": {
     "test": "jest",
     "format": "echo Formatting the code ⌛ && prettier --write . && echo \"✅ Code formatted, ready to commit!\"",
-    "lint": "echo Linting the code ⌛ && eslint ./**/*.cjs --fix && echo \"✅ Code linted, ready to commit!\""
+    "lint": "echo Linting the code ⌛ && eslint ./**/*.cjs --fix && echo \"✅ Code linted, ready to commit!\"",
+    "bump": "npx -y npm-check-updates -u && npm prune"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.24.5",
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.3.0",
+    "@babel/preset-env": "^7.27.2",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/js": "^9.27.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
-    "allure-jest": "^3.0.0-beta.3",
-    "axios": "^1.7.1",
+    "@types/node": "^22.15.21",
+    "allure-jest": "^3.2.2",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.3.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.4.0",
     "jest": "^29.7.0",
     "jest-expect-message": "^1.1.3",
-    "prettier": "^3.2.5",
-    "supertest": "^7.0.0"
+    "pactum": "^3.7.6",
+    "prettier": "^3.5.3",
+    "supertest": "^7.1.1",
+    "axios": "^1.9.0"
   },
   "commitlint": {
     "extends": [
