--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.27.0",
+    "@faker-js/faker": "^9.8.0",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.21",
     "allure-jest": "^3.2.2",
+    "axios": "^1.9.0",
     "babel-jest": "^29.7.0",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
@@ -31,8 +33,7 @@
     "jest-expect-message": "^1.1.3",
     "pactum": "^3.7.6",
     "prettier": "^3.5.3",
-    "supertest": "^7.1.1",
-    "axios": "^1.9.0"
+    "supertest": "^7.1.1"
   },
   "commitlint": {
     "extends": [
